# cxxtc

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
benchmarks/: CMakeLists.txt  timecode_basic.bench.cpp
examples/: CMakeLists.txt  timecode_basic-increment.example.cpp  timecode_basic-initialization.example.cpp
examples/include/: common.hpp
examples/src/: common.cpp
include/: errors.hpp  timecode.hpp  timecode_basic.hpp  timecode_common.hpp  traits.hpp  utility.hpp
tests/: CMakeLists.txt  timecode_basic.test.cpp  timecode_fps.test.cpp
